--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.13",
-    "next": "14.0.4",
+    "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18"
   },
